# Webasto-Next-Modbus

./: .gitignore  .pre-commit-config.yaml  .vulture_whitelist.py  .yamllint  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  hacs.json  info.md  pyproject.toml  release_notes.md  webinterface_analysis.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml  codeql.yml  dependabot-auto-merge.yml  release.yaml  upstream-compat.yml
blueprints/automation/webasto_next_modbus/: charge_target.yaml  charge_until_full.yaml  event_notifications.yaml  fastcharge_fullcharge.yaml  solar_optimizer.yaml
custom_components/webasto_next_modbus/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device_trigger.py  diagnostics.py  entity.py  hub.py  icons.json  manifest.json  number.py  quality_scale.yaml  rest_client.py  select.py  sensor.py  services.yaml  switch.py  text.py
custom_components/webasto_next_modbus/translations/: de.json  en.json
docker/: docker-compose.yml
docs/: README.md  architecture.md  development.md  rest-api-integration-plan.md  rest-api-reverse-engineering.md  rest-api.md  support.md
scripts/: analyze_webinterface.py  capture_api.py  check.sh  life_bit_minimal.py  modbus_diagnostics.py
tests/: conftest.py  test_blueprints.py  test_config_flow.py  test_coordinator.py  test_device_trigger.py  test_entities.py  test_hub.py  test_rest_client_unite.py  test_services.py  test_virtual_wallbox.py
virtual_wallbox/: __init__.py  __main__.py  cli.py  server.py  simulator.py  smoke.py
