[project]
name = "webasto-next-modbus"
version = "0.4.0-beta.8"
description = "Home Assistant integration for Webasto Next / Ampure Unite wallboxes via Modbus TCP"
authors = [{ name = "Webasto Next Modbus maintainers" }]
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "pymodbus>=3.11.2,<4",
]

[project.scripts]
virtual-wallbox = "virtual_wallbox.cli:main"
webasto-smoke = "virtual_wallbox.smoke:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "C4", "TID"]

[tool.setuptools]
packages = [
  "custom_components.webasto_next_modbus",
  "virtual_wallbox",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "colorlog>=6.10.1",
    "coverage>=7.10.6",
    "homeassistant>=2025.1.0b7",
    "mypy>=1.8",
    "pycares<5.0.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24,<2",
    "pytest-cov==7.0.0",
    "pytest-homeassistant-custom-component==0.13.300",
    "ruff>=0.5",
    "voluptuous>=0.15.2",
]
