[project]
name = "webasto-next-modbus"
version = "1.1.5"
description = "Home Assistant integration for Webasto Next / Ampure Unite wallboxes via Modbus TCP and REST API"
authors = [{ name = "Webasto Next maintainers" }]
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "pymodbus>=3.11.2,<4",
    "aiohttp>=3.9.0",
]

[project.scripts]
virtual-wallbox = "virtual_wallbox.cli:main"
webasto-smoke = "virtual_wallbox.smoke:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
exclude = [".vulture_whitelist.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "C4", "TID"]

[tool.bandit]
skips = ["B101", "B110"]

[tool.vulture]
min_confidence = 80
paths = ["custom_components", "virtual_wallbox", "scripts"]
sort_by_size = true
verbose = false
exclude = [".venv", ".git", "__pycache__"]
ignore_names = ["_attr_has_entity_name"]

[tool.setuptools]
packages = [
  "custom_components.webasto_next_modbus",
  "virtual_wallbox",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "codespell>=2.4.1",
    "colorlog>=6.10.1",
    "coverage>=7.10.6",
    "deptry>=0.24.0",
    "homeassistant>=2025.1.0b7",
    "mdformat>=0.7.19",
    "mypy>=1.8",
    "pycares<6.0.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24,<2",
    "pytest-cov==7.0.0",
    "pytest-homeassistant-custom-component==0.13.300",
    "ruff>=0.5",
    "voluptuous>=0.15.2",
    "vulture>=2.14",
    "yamllint>=1.37.1",
]

[tool.deptry]
extend_exclude = ["scripts"]

[tool.deptry.per_rule_ignores]
DEP003 = ["custom_components"]
DEP004 = ["homeassistant", "voluptuous"]

[tool.codespell]
skip = "*.pdf,*.log,*.log.*,*.csv"
ignore-words-list = "hass,alle,unter,adresse,ist,oder,paket,intervall,stopp,startet,aktive,variante"

