[project]
name = "webasto-next-modbus"
version = "1.3.1"
description = "Home Assistant integration for Webasto Next / Ampure Unite wallboxes via Modbus TCP and REST API"
authors = [{ name = "Webasto Next maintainers" }]
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    # No upper bound. Home Assistant core dictates the installed pymodbus
    # version via its bundled `modbus` integration; a fixed ceiling here
    # automatically blocks the integration whenever HA-Core moves past it
    # (see #88 for the HA 2026.7 / pymodbus 3.13.1 incident). The dev
    # group below still pins pymodbus<3.12 for the virtual_wallbox
    # simulator; that pin only affects the test environment. Compat with
    # future upstream bumps is caught early by
    # .github/workflows/upstream-compat.yml.
    "pymodbus>=3.11.2",
    "aiohttp>=3.13.5",
]

[project.scripts]
virtual-wallbox = "virtual_wallbox.cli:main"
webasto-smoke = "virtual_wallbox.smoke:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.ruff]
line-length = 100
exclude = [".vulture_whitelist.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "C4", "TID"]

[tool.bandit]
skips = ["B101", "B110"]

[tool.vulture]
min_confidence = 80
paths = ["custom_components", "virtual_wallbox", "scripts"]
sort_by_size = true
verbose = false
exclude = [".venv", ".git", "__pycache__"]
ignore_names = ["_attr_has_entity_name"]

[tool.setuptools]
packages = [
  "custom_components.webasto_next_modbus",
  "virtual_wallbox",
]

[tool.setuptools.package-data]
"custom_components.webasto_next_modbus" = ["py.typed"]

[tool.mypy]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
# voluptuous ships no type information; treat it as untyped rather than
# erroring on the missing stubs.
module = ["voluptuous", "voluptuous.*"]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "codespell>=2.4.1",
    "colorlog>=6.10.1",
    "coverage>=7.10.6",
    "deptry>=0.24.0",
    "homeassistant>=2026.5.1",
    "mdformat>=0.7.19",
    "mypy>=1.8",
    "pycares<6.0.0",
    # Keep pymodbus on 3.11.x in the dev/test environment while
    # virtual_wallbox/server.py still targets the 3.11 datastore API
    # (ModbusDeviceContext.store / .decode were dropped in 3.12+, replaced
    # by SimData/SimDevice). Manifest + [project].dependencies allow the
    # full 3.x range for production users on HA 2026.7 (pymodbus 3.13.1).
    # Drop this pin once virtual_wallbox is ported to the new API.
    "pymodbus>=3.11.2,<3.12",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24,<2",
    "pytest-cov==7.1.0",
    "pytest-homeassistant-custom-component==0.13.332",
    "ruff>=0.5",
    "voluptuous>=0.15.2",
    "vulture>=2.14",
    "yamllint>=1.37.1",
]

[tool.deptry]
extend_exclude = ["scripts"]

[tool.deptry.per_rule_ignores]
DEP003 = ["custom_components"]
DEP004 = ["homeassistant", "voluptuous"]

[tool.codespell]
skip = "*.pdf,*.log,*.log.*,*.csv"
ignore-words-list = "hass,alle,unter,adresse,ist,oder,paket,intervall,stopp,startet,aktive,variante"

